feat: Implement user authentication and login/logout functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ Flask-WTF
 Pillow          # Для обработки изображений
 qrcode          # Для генерации QR-кодов
 python-dotenv   # Опционально, для загрузки конфига из .env
+waitress        # Опционально, для запуска
