--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ Pillow          # Для обработки изображений
 qrcode          # Для генерации QR-кодов
 python-dotenv   # Опционально, для загрузки конфига из .env
 waitress        # Опционально, для запуска
+gunicorn        # Для корректной работы renderer
